[tool.poetry]
name = "lc-rag"
version = "0.1.0"
description = "Simple RAG solution using LangChain"
authors = ["Randy Bradshaw <randy.bradshaw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.10"
langchain-openai = "^0.2.12"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.10"
langchain-ollama = "^0.2.1"
langchain-anthropic = "^0.3.0"
chromadb = "^0.5.23"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
